--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.1",
     "passport": "^0.4.0",
     "passport-custom": "^1.0.5",
